# o2

./: .gitattributes  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CREDITS  Cargo.toml  Cross.toml  README.md  SECURITY.md  codecov.yml  deny.toml
.github/workflows/: audit.yml  ci.yml  mirror.yml  release.yml
benches/: engine_bench.rs
examples/: README.md  o2-demo.rs  o2-multi-ctrl-n.rs
src/: lib.rs  main.rs
src/app/: clipboard.rs  commander.rs  cursor.rs  editor.rs  history.rs  input.rs  mod.rs  types.rs
src/app/midi/: clock.rs  mod.rs  state.rs  tempo.rs  wire.rs
src/app/ui/: mod.rs  render.rs  theme.rs
src/core/: app.rs  glyph.rs  midi.rs  mod.rs  operator.rs  operators.rs  oxygen.rs  transpose.rs  vm.rs
src/core/io/: clock.rs  midi.rs  mod.rs  osc.rs  udp.rs
src/editor/: clipboard.rs  clock.rs  commander.rs  cursor.rs  history.rs  input.rs  mod.rs  types.rs
src/ui/: render.rs  theme.rs
tests/: e2e.rs  engine.rs  glyph.rs  midi.rs  operators.rs  transpose.rs
tests/cases/: cardinals.json  logic.json  parity.json  rw.json  sequencer.json  tables.json
tests/dumps/cardinals/: frame_100.json  frame_153.json  frame_349.json
tests/dumps/logic/: frame_16.json  frame_255.json
tests/dumps/parity/: frame_1.json  frame_2.json
tests/dumps/rw/: frame_100.json  frame_8.json
tests/dumps/sequencer/: frame_150.json  frame_16.json
tests/dumps/tables/: frame_225.json
tests/grids/: cardinals.o2  logic.o2  parity.o2  rw.o2  sequencer.o2  tables.o2
